--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,44 +42,31 @@
 
       <section class="section exercice">
         <h2 class="block">Mes exercices</h2>
-        <ul>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21350/assignsubmission_file/submission_files/10012/indexlvada.html?forcedownload=1"
-              >La vie d'Ada</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21350/assignsubmission_file/submission_files/10012/styleslvada.css?forcedownload=1"
-              >La vie d'Ada</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21382/assignsubmission_file/submission_files/10209/index-2.html?forcedownload=1"
-              >Horoscope</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21382/assignsubmission_file/submission_files/10209/indexjs-2.js?forcedownload=1"
-              >Horoscope</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21383/assignsubmission_file/submission_files/10301/index-3.html?forcedownload=1"
-              >Compteur</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://moodle.adatechschool.fr/pluginfile.php/21383/assignsubmission_file/submission_files/10301/script-3.js?forcedownload=1"
-              >Compteur</a
-            >
-          </li>
-        </ul>
+
+        <div class="exercice-item-1">
+          <h3>La vie d'Ada</h3>
+          <p>Reproduire un visuel texte + image en HTML</p>
+          <p>Créer ce visuel en CSS avec des couleurs et un arrondi</p>
+          <p><strong>Technologies utilisées :</strong> HTML et CSS</p>
+
+          <div class="preview-1">
+            <img
+              src="/Capture d'écran 2025-10-21 110606.png"
+              alt="screenshot"
+            />
+          </div>
+        </div>
+
+        <div class="exercice-item-2">
+          <h3>Horoscope</h3>
+          <p>Transformer un tableau d’objet écrit en JavaScript en éléments HTML</p>
+          <p>strong>Technologies utlisées :</strong> HTML et JavaScript</p>
+
+          <div class="preview-2">
+            <iimg src="Capture d'écran 2025-10-21 110827.png" alt="screenshot"/>
+          </div>
+
+        </div>
       </section>
     </main>
   </body>
