change and finish

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,6 +45,13 @@
 
         <div class="exercice-item-1">
           <h3>La vie d'Ada</h3>
+          <a
+            href="https://github.com/David4976/projet-ada/tree/main/exercice%20La%20vie%20d'Ada"
+            target="_blank"
+            class="github-link"
+          >
+            Voir sur GitHub
+          </a>
           <p>Reproduire un visuel texte + image en HTML</p>
           <p>Créer ce visuel en CSS avec des couleurs et un arrondi</p>
           <p><strong>Technologies utilisées :</strong> HTML et CSS</p>
@@ -59,15 +66,59 @@
 
         <div class="exercice-item-2">
           <h3>Horoscope</h3>
-          <p>Transformer un tableau d’objet écrit en JavaScript en éléments HTML</p>
-          <p>strong>Technologies utlisées :</strong> HTML et JavaScript</p>
+          <a
+            href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+            target="_blank"
+            class="github-link"
+          >
+            Voir sur GitHub
+          </a>
+          <p>
+            Transformer un tableau d’objet écrit en JavaScript en éléments HTML
+          </p>
+          <p><strong>Technologies utlisées :</strong> HTML et JavaScript</p>
 
           <div class="preview-2">
-            <iimg src="Capture d'écran 2025-10-21 110827.png" alt="screenshot"/>
+            <img src="Capture d'écran 2025-10-21 110827.png" alt="screenshot" />
           </div>
+        </div>
+        <div class="exercice-item-3">
+          <h3>Compteur de clics</h3>
+          <a
+            href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+            target="_blank"
+            class="github-link"
+          >
+            Voir sur GitHub
+          </a>
+          <p>Créer un bouton qui compte les clics</p>
+          <p><strong>Technologies utilisées :</strong> HTML et JavaScript</p>
 
+          <div class="preview-3">
+            <img src="Capture d'écran 2025-10-21 110911.png" alt="screenshot" />
+          </div>
         </div>
       </section>
     </main>
   </body>
 </html>
+<footer class="footer">
+  <div class="footer-content">
+    <p>
+      📧 Contact : <a href="mailto:david160@hotmail.fr">david160@hotmail.fr</a>
+    </p>
+
+    <p>
+      🔗
+      <a
+        href="https://github.com/David4976/projet-ada"
+        target="_blank"
+        class="github-link"
+      >
+        Mon GitHub
+      </a>
+    </p>
+
+    <p class="copyright">© 2025 David Belloir — Tous droits réservés.</p>
+  </div>
+</footer>
