--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,7 +58,7 @@
 
           <div class="preview-1">
             <img
-              src="/Capture d'écran 2025-10-21 110606.png"
+              src="./Capture d'écran 2025-10-21 110606.png"
               alt="screenshot"
             />
           </div>
@@ -104,6 +104,19 @@
 </html>
 <footer class="footer">
   <div class="footer-content">
+    <svg class="grass" viewBox="0 0 1440 320" preserveAspectRatio="none">
+      <path
+        fill="url(#grad)"
+        fill-opacity="0.3"
+        d="M0,256L48,234.7C96,213,192,171,288,160C384,149,480,171,576,176C672,181,768,171,864,170.7C960,171,1056,181,1152,170.7C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+      ></path>
+      <defs>
+        <linearGradient id="grad" x1="0" y1="0" x2="0" y2="1">
+          <stop offset="0%" stop-color="white" stop-opacity="0.8" />
+          <stop offset="100%" stop-color="white" stop-opacity="0" />
+        </linearGradient>
+      </defs>
+    </svg>
     <p>
       📧 Contact : <a href="mailto:david160@hotmail.fr">david160@hotmail.fr</a>
     </p>
