--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.google.com/specimen/Story+Script"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -40,62 +44,79 @@
         </div>
       </section>
 
-      <section class="section exercice">
+      <section class="section-exercice">
         <h2 class="block">Mes exercices</h2>
 
-        <div class="exercice-item-1">
-          <h3>La vie d'Ada</h3>
-          <a
-            href="https://github.com/David4976/projet-ada/tree/main/exercice%20La%20vie%20d'Ada"
-            target="_blank"
-            class="github-link"
-          >
-            Voir sur GitHub
-          </a>
-          <p>Reproduire un visuel texte + image en HTML</p>
-          <p>Créer ce visuel en CSS avec des couleurs et un arrondi</p>
-          <p><strong>Technologies utilisées :</strong> HTML et CSS</p>
-
-          <div class="preview-1">
-            <img
-              src="./Capture d'écran 2025-10-21 110606.png"
-              alt="screenshot"
-            />
+        <div class="table-exos">
+          <div class="table-header">
+            <div>Exercice</div>
+            <div>Lien GitHub</div>
+            <div>Description</div>
+            <div>Technologies utilisées</div>
+            <div>Screenshot</div>
           </div>
-        </div>
+          <div class="table-row">
+            <h3>La vie d'Ada</h3>
+            <a
+              href="https://github.com/David4976/projet-ada/tree/main/exercice%20La%20vie%20d'Ada"
+              target="_blank"
+              class="github-link"
+            >
+              Voir sur GitHub
+            </a>
+            <p>
+              Reproduire un visuel texte + image en HTML Créer ce visuel en CSS
+              avec des couleurs et un arrondi
+            </p>
+            <p><strong>Technologies utilisées :</strong> HTML et CSS</p>
 
-        <div class="exercice-item-2">
-          <h3>Horoscope</h3>
-          <a
-            href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
-            target="_blank"
-            class="github-link"
-          >
-            Voir sur GitHub
-          </a>
-          <p>
-            Transformer un tableau d’objet écrit en JavaScript en éléments HTML
-          </p>
-          <p><strong>Technologies utlisées :</strong> HTML et JavaScript</p>
-
-          <div class="preview-2">
-            <img src="Capture d'écran 2025-10-21 110827.png" alt="screenshot" />
+            <div class="preview-1">
+              <img
+                src="/Capture d'écran 2025-10-21 110606.png"
+                alt="screenshot"
+              />
+            </div>
           </div>
-        </div>
-        <div class="exercice-item-3">
-          <h3>Compteur de clics</h3>
-          <a
-            href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
-            target="_blank"
-            class="github-link"
-          >
-            Voir sur GitHub
-          </a>
-          <p>Créer un bouton qui compte les clics</p>
-          <p><strong>Technologies utilisées :</strong> HTML et JavaScript</p>
+          <div class="table-row">
+            <h3>Horoscope</h3>
+            <a
+              href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+              target="_blank"
+              class="github-link"
+            >
+              Voir sur GitHub
+            </a>
+            <p>
+              Transformer un tableau d’objet écrit en JavaScript en éléments
+              HTML
+            </p>
+            <p><strong>Technologies utlisées :</strong> HTML et JavaScript</p>
 
-          <div class="preview-3">
-            <img src="Capture d'écran 2025-10-21 110911.png" alt="screenshot" />
+            <div class="preview-2">
+              <img
+                src="Capture d'écran 2025-10-21 110827.png"
+                alt="screenshot"
+              />
+            </div>
+          </div>
+          <div class="table-row">
+            <h3>Compteur de clics</h3>
+            <a
+              href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+              target="_blank"
+              class="github-link"
+            >
+              Voir sur GitHub
+            </a>
+            <p>Créer un bouton qui compte les clics</p>
+            <p><strong>Technologies utilisées :</strong> HTML et JavaScript</p>
+
+            <div class="preview-3">
+              <img
+                src="Capture d'écran 2025-10-21 110911.png"
+                alt="screenshot"
+              />
+            </div>
           </div>
         </div>
       </section>
