--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.google.com/specimen/Story+Script"
+      href="https://fonts.googleapis.com/css2?family=Story+Script&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -32,7 +34,7 @@
     </header>
     <main>
       <section class="about">
-        <img src="/avatar.png" alt="avatar" />
+        <img src="avatar.png" alt="avatar" />
         <div class="about-text">
           <h2 class="block">A propos de moi</h2>
           <p>
@@ -58,7 +60,7 @@
           <div class="table-row">
             <h3>La vie d'Ada</h3>
             <a
-              href="https://github.com/David4976/projet-ada/tree/main/exercice%20La%20vie%20d'Ada"
+              href="https://github.com/David4976/projet-ada/tree/main/portfolio/exercice%20La%20vie%20d'Ada"
               target="_blank"
               class="github-link"
             >
@@ -72,7 +74,7 @@
 
             <div class="preview-1">
               <img
-                src="/Capture d'écran 2025-10-21 110606.png"
+                src="Capture d'écran 2025-10-21 110606.png"
                 alt="screenshot"
               />
             </div>
@@ -80,7 +82,7 @@
           <div class="table-row">
             <h3>Horoscope</h3>
             <a
-              href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+              href="https://github.com/David4976/projet-ada/tree/main/portfolio/exercice%20Horoscope%20et%20Compteur"
               target="_blank"
               class="github-link"
             >
@@ -102,7 +104,7 @@
           <div class="table-row">
             <h3>Compteur de clics</h3>
             <a
-              href="https://github.com/David4976/projet-ada/tree/main/exercice%20Horoscope%20et%20Compteur"
+              href="https://github.com/David4976/projet-ada/tree/main/portfolio/exercice%20Horoscope%20et%20Compteur"
               target="_blank"
               class="github-link"
             >
